First draft of report

--- a/report/OHIBib.bib
+++ b/report/OHIBib.bib
@@ -209,3 +209,30 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	file = {Beretta_Santaniello_2016_Nearest neighbor imputation algorithms.pdf:/home/charlie/Zotero/storage/LTG5W5EY/Beretta_Santaniello_2016_Nearest neighbor imputation algorithms.pdf:application/pdf;Snapshot:/home/charlie/Zotero/storage/4FYSR249/s12911-016-0318-z.html:text/html},
 }
 
+@article{halpern_index_2012,
+	title = {An index to assess the health and benefits of the global ocean},
+	volume = {488},
+	issn = {0028-0836, 1476-4687},
+	url = {http://www.nature.com/articles/nature11397},
+	doi = {10.1038/nature11397},
+	language = {en},
+	number = {7413},
+	urldate = {2022-01-20},
+	journal = {Nature},
+	author = {Halpern, Benjamin S. and Longo, Catherine and Hardy, Darren and McLeod, Karen L. and Samhouri, Jameal F. and Katona, Steven K. and Kleisner, Kristin and Lester, Sarah E. and O’Leary, Jennifer and Ranelletti, Marla and Rosenberg, Andrew A. and Scarborough, Courtney and Selig, Elizabeth R. and Best, Benjamin D. and Brumbaugh, Daniel R. and Chapin, F. Stuart and Crowder, Larry B. and Daly, Kendra L. and Doney, Scott C. and Elfes, Cristiane and Fogarty, Michael J. and Gaines, Steven D. and Jacobsen, Kelsey I. and Karrer, Leah Bunce and Leslie, Heather M. and Neeley, Elizabeth and Pauly, Daniel and Polasky, Stephen and Ris, Bud and St Martin, Kevin and Stone, Gregory S. and Sumaila, U. Rashid and Zeller, Dirk},
+	month = aug,
+	year = {2012},
+	pages = {615--620},
+}
+
+
+@misc{noauthor_world_nodate,
+	title = {World {Happiness} {Report}},
+	url = {https://worldhappiness.report/},
+	abstract = {The World Happiness Report is a publication of the Sustainable Development Solutions Network, powered by data from the Gallup World Poll and Lloyd’s Register Foundation, who provided access to the World Risk Poll. The 2021 Report includes data from the ICL-YouGov Behaviour Tracker as part of the COVID Data Hub from the Institute of Global Health Innovation.},
+	language = {en},
+	urldate = {2022-01-20},
+	file = {Snapshot:/home/charlie/Zotero/storage/UVPMITSA/worldhappiness.report.html:text/html},
+}
+
+
